<resources>
    <string name="app_name">Home Assignment</string>
    <string name="submit">Submit</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="expenses">Expenses</string>
    <string name="dollor">$</string>
    <string name="income">Income</string>
    <string name="balance">Balance</string>
    <string name="transaction_item">transaction item</string>
    <string name="date">10th October, 2021</string>
    <string name="description">Transaction Discription</string>
    <string name="add">Add</string>
    <string name="dollar">$</string>
    <string name="one">1</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="dollar_amount">$ %1$d</string>
    <string name="date_select">Select date</string>
    <string name="description_item">Please add the description</string>
    <string name="balance_value">$ %1$d</string>
</resources>
